--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,14 +1,6 @@
 .App {
   text-align: center;
 }
-.App h4 {
-  margin-top: 1em;
-  margin-bottom: 2em;
-}
-.MainButtons button {
-  margin-left: 0.5em;
-  margin-right: 0.5em;
-}
-.MainButtons .MuiSvgIcon-root {
-  margin-right: 0.2em;
+.page {
+  padding: 1em;
 }
